// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tagPropertyTokenizer should fail with whitespace within value 1`] = `
{
  "endIdx": 5,
  "isBoolean": false,
  "key": "Test",
  "startIdx": 0,
  "type": "Property",
}
`;

exports[`tagPropertyTokenizer should tokenize false boolean properties 1`] = `
{
  "endIdx": 4,
  "isBoolean": true,
  "key": "Test",
  "source": "!Test",
  "startIdx": 0,
  "type": "Property",
  "value": false,
}
`;

exports[`tagPropertyTokenizer should tokenize true boolean properties 1`] = `
{
  "endIdx": 4,
  "isBoolean": true,
  "key": "Test",
  "startIdx": 0,
  "type": "Property",
  "value": true,
}
`;

exports[`tagPropertyTokenizer should tokenize without whitespace 1`] = `
{
  "endIdx": 4,
  "isBoolean": false,
  "key": "Test",
  "startIdx": 0,
  "type": "Property",
}
`;
